tests/baselines/reference/conditionalAnyCheckTypePicksBothBranches.errors.txt
conditionalAnyCheckTypePicksBothBranches.ts(9,1): error TS2322: Type '0' is not assignable to type '1'.


==== conditionalAnyCheckTypePicksBothBranches.ts (1 errors) ====
    type T = any extends number ? 1 : 0;
    let x: T;
    x = 1;
    x = 0; // not an error
    
    type U = [any] extends [number] ? 1 : 0;
    let y: U;
    y = 1;
    y = 0; // error
    ~
!!! error TS2322: Type '0' is not assignable to type '1'.